--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMasterChef"
         tools:targetApi="31">
-        <activity
-            android:name=".Category_Chay"
-            android:exported="false" />
-        <activity
-            android:name=".Category_Xao"
-            android:exported="false" />
-        <activity
-            android:name=".Category_Nuong"
-            android:exported="false" />
-        <activity
-            android:name=".DetailsCategory_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".canh"
-            android:exported="false" />
+
+
         <activity
             android:name=".Login"
             android:exported="true">
@@ -43,11 +30,27 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".Canhgheraumuong_Moncanh"
+            android:name=".Details_Food"
             android:exported="true" />
         <activity
             android:name=".register"
             android:exported="true" />
+        <activity
+            android:name=".Details_Favorite"
+            android:exported="true" />
+        <activity
+            android:name=".DetailsCategory_Activity"
+            android:exported="true" />
+        <activity
+            android:name=".Category_Nuong"
+            android:exported="true" />
+        <activity
+            android:name=".Category_Xao"
+            android:exported="true" />
+        <activity
+            android:name=".Category_Chay"
+            android:exported="true" />
+
     </application>
 
 </manifest>
